test/corpus/subroutines.txt
==================
Subroutine call (direct)
==================

o100 call
o<hello> call

---

(source_file
  (line
    (word
      (o_word
        (subroutine_call
          (direct_label
            (number))))))
  (line
    (word
      (o_word
        (subroutine_call
          (direct_label
            (property_name)))))))

==================
Subroutine call (indirect)
==================

o[#101+2] call

---

(source_file
  (line
    (word
      (o_word
        (subroutine_call
          (indirect_label
            (expression
              (binary_expression
                (parameter_word
                  (parameter_identifier)
                  (number))
                (number)))))))))

==================
Subroutine call (args)
==================

o100 call [100] [2] [325]

---

(source_file
  (line
    (word
      (o_word
        (subroutine_call
          (direct_label
            (number))
          (expression
            (number))
          (expression
            (number))
          (expression
            (number)))))))

==================
Fanuc-style loop
==================

WHILE [#1 LT 10] DO 1
  #1 = [#1+1]
END 1

---

(source_file
  (line
    (word
      (o_word
        (fanuc_loop
          (expression
            (binary_expression
              (parameter_word
                (parameter_identifier)
                (number))
              (number)))
          (integer)
          (line
            (word
              (parameter_variable
                (parameter_identifier)
                (unsigned_integer)
                (expression
                  (binary_expression
                    (parameter_word
                      (parameter_identifier)
                      (number))
                    (number))))))
          (integer))))))

==================
Fanuc-style conditional
==================

IF [#0] THEN #1 = 1

---

(source_file
  (line
    (word
      (o_word
        (fanuc_if_statement
          (expression
            (parameter_word
              (parameter_identifier)
              (number)))
          (parameter_variable
            (parameter_identifier)
            (unsigned_integer)
            (number)))))))

==================
Fanuc-style unconditional
==================

G1
GOTO 1

---

(source_file
  (line
    (word
      (g_word
        (number))))
  (line
    (word
      (o_word
        (fanuc_unconditional
          (integer))))))

==================
Subroutine definition
==================

o100 sub
  G53 G0 X0 Y0 Z0
o100 endsub

---

(source_file
  (line
    (word
      (o_word
        (subroutine_definition
          (direct_label
            (number))
          (subroutine_block
            (line
              (word
                (g_word
                  (number)))
              (word
                (g_word
                  (number)))
              (word
                (axis_word
                  (axis_identifier)
                  (number)))
              (word
                (axis_word
                  (axis_identifier)
                  (number)))
              (word
                (axis_word
                  (axis_identifier)
                  (number)))))
          (direct_label
            (number)))))))

==================
Subroutine "if" statement
==================

o100 sub
  o110 if [#2 GT 5]
    o100 return
  o110 endif
o100 endsub

---

(source_file
  (line
    (word
      (o_word
        (subroutine_definition
          (direct_label
            (number))
          (subroutine_block
            (line
              (word
                (o_word
                  (if_statement
                    (direct_label
                      (number))
                    (expression
                      (binary_expression
                        (parameter_word
                          (parameter_identifier)
                          (number))
                        (number)))
                    (subroutine_block
                      (return_statement
                        (direct_label
                          (number))))
                    (direct_label
                      (number)))))))
          (direct_label
            (number)))))))

==================
Bare "if" statement
==================

o101 if [#31 EQ 3]
  S2000
o101 endif

---

(source_file
  (line
    (word
      (o_word
        (if_statement
          (direct_label
            (number))
          (expression
            (binary_expression
              (parameter_word
                (parameter_identifier)
                (number))
              (number)))
          (subroutine_block
            (line
              (word
                (s_word
                  (unsigned_integer)))))
          (direct_label
            (number)))))))

==================
Subroutine "if-elseif-else" clause
==================

o102 if [#2 GT 5]
  F100
o102 elseif [#2 LT 2]
  F200
o102 else
  F150
o102 endif

---

(source_file
  (line
    (word
      (o_word
        (if_statement
          (direct_label
            (number))
          (expression
            (binary_expression
              (parameter_word
                (parameter_identifier)
                (number))
              (number)))
          (subroutine_block
            (line
              (word
                (f_word
                  (number)))))
          (elseif_clause
            (direct_label
              (number))
            (expression
              (binary_expression
                (parameter_word
                  (parameter_identifier)
                  (number))
                (number)))
            (subroutine_block
              (line
                (word
                  (f_word
                    (number))))))
          (else_clause
            (direct_label
              (number))
            (subroutine_block
              (line
                (word
                  (f_word
                    (number))))))
          (direct_label
            (number)))))))

==================
Subroutine "while" loop
==================

o101 while [#1 LT 10]
  #1 = [#1+1]
o101 endwhile

---

(source_file
  (line
    (word
      (o_word
        (loop
          (direct_label
            (number))
          (expression
            (binary_expression
              (parameter_word
                (parameter_identifier)
                (number))
              (number)))
          (subroutine_block
            (line
              (word
                (parameter_variable
                  (parameter_identifier)
                  (unsigned_integer)
                  (expression
                    (binary_expression
                      (parameter_word
                        (parameter_identifier)
                        (number))
                      (number)))))))
          (direct_label
            (number)))))))

==================
Subroutine "do-while" loop
==================

o100 do
  o110 if [#1 EQ 2]
    #1 = 3
    o100 continue
  o110 endif
  #1 = [#1 + 1]
o100 while [#1 LT 3]

---

(source_file
  (line
    (word
      (o_word
        (loop
          (direct_label
            (number))
          (subroutine_block
            (line
              (word
                (o_word
                  (if_statement
                    (direct_label
                      (number))
                    (expression
                      (binary_expression
                        (parameter_word
                          (parameter_identifier)
                          (number))
                        (number)))
                    (subroutine_block
                      (line
                        (word
                          (parameter_variable
                            (parameter_identifier)
                            (unsigned_integer)
                            (number)))))
                    (subroutine_block
                      (continue_statement
                        (direct_label
                          (number))))
                    (direct_label
                      (number)))))))
          (subroutine_block
            (line
              (word
                (parameter_variable
                  (parameter_identifier)
                  (unsigned_integer)
                  (expression
                    (binary_expression
                      (parameter_word
                        (parameter_identifier)
                        (number))
                      (number)))))))
          (direct_label
            (number))
          (expression
            (binary_expression
              (parameter_word
                (parameter_identifier)
                (number))
              (number))))))))

==================
Subroutine "repeat" loop
==================

o103 repeat [5]
G0 X1 Y1
o103 endrepeat

---

(source_file
  (line
    (word
      (o_word
        (loop
          (direct_label
            (number))
          (expression
            (number))
          (subroutine_block
            (line
              (word
                (g_word
                  (number)))
              (word
                (axis_word
                  (axis_identifier)
                  (number)))
              (word
                (axis_word
                  (axis_identifier)
                  (number)))))
          (direct_label
            (number)))))))
