test/corpus/words.txt
==================
Words
==================

G1 F1500
G1 X50 Y25.3 E22.
T0
G92 E0
G28 P1

---

(source_file
  (line
    (word
      (g_word
        (number)))
    (word
      (f_word
        (number))))
  (line
    (word
      (g_word
        (number)))
    (word
      (axis_word
        (axis_identifier)
        (number)))
    (word
      (axis_word
        (axis_identifier)
        (number)))
    (word
      (axis_word
        (axis_identifier)
        (number))))
  (line
    (word
      (t_word
        (unsigned_integer))))
  (line
    (word
      (g_word
        (number)))
    (word
      (axis_word
        (axis_identifier)
        (number))))
  (line
    (word
      (g_word
        (number)))
    (word
      (parameter_word
        (parameter_identifier)
        (number)))))

==================
Line number
==================

N1 T0
N2 G92
N3 G28

---

(source_file
  (line
    (line_number
      (unsigned_integer))
    (word
      (t_word
        (unsigned_integer))))
  (line
    (line_number
      (unsigned_integer))
    (word
      (g_word
        (number))))
  (line
    (line_number
      (unsigned_integer))
    (word
      (g_word
        (number)))))

==================
Indexed axes
==================

G1 X1=50 Y1=25.3 E1=22.

---

(source_file
  (line
    (word
      (g_word
        (number)))
    (word
      (indexed_axis_word
        (axis_identifier)
        (unsigned_integer)
        (number)))
    (word
      (indexed_axis_word
        (axis_identifier)
        (unsigned_integer)
        (number)))
    (word
      (indexed_axis_word
        (axis_identifier)
        (unsigned_integer)
        (number)))))

==================
Checksum
==================

G92 E0 *67

---

(source_file
  (line
    (word
      (g_word
        (number)))
    (word
      (axis_word
        (axis_identifier)
        (number)))
    (checksum
      (number))))

==================
Checksum with comment
==================

G92 E0 *67 ; Test

---

(source_file
  (line
    (word
      (g_word
        (number)))
    (word
      (axis_word
        (axis_identifier)
        (number)))
    (checksum
      (number))
    (eol_comment)))

==================
Checksum errors if not at line end
:error
==================

G92 *67 E0

---

(source_file
  (line
    (word
      (g_word
        (number)))
    (checksum
      (number))
    (word
      (axis_word
        (axis_identifier)
        (number)))))

==================
Parameter variable (number)
==================

#101=1.2

---

(source_file
  (line
    (word
      (parameter_variable
        (parameter_identifier)
        (unsigned_integer)
        (number)))))

==================
Parameter variable (expression)
==================

#101=[1+1]

---

(source_file
  (line
    (word
      (parameter_variable
        (parameter_identifier)
        (unsigned_integer)
        (expression
          (binary_expression
            (number)
            (number)))))))

==================
Parameter variable (expression with parameter reference)
==================

#101=1
#101=[#101+1]

---

(source_file
  (line
    (word
      (parameter_variable
        (parameter_identifier)
        (unsigned_integer)
        (number))))
  (line
    (word
      (parameter_variable
        (parameter_identifier)
        (unsigned_integer)
        (expression
          (binary_expression
            (parameter_word
              (parameter_identifier)
              (number))
            (number)))))))

==================
Named parameter
==================

#<test>

---

(source_file
  (line
    (word
      (parameter_word
        (parameter_identifier)
        (property_name)))))

==================
Valued named parameter
==================

#<test>=1.1

---

(source_file
  (line
    (word
      (parameter_variable
        (parameter_identifier)
        (property_name)
        (number)))))

==================
Valued named parameter referencing another named parameter
==================

#<_endmill_rad> = [#<_endmill_dia>/2.0]

---

(source_file
  (line
    (word
      (parameter_variable
        (parameter_identifier)
        (property_name)
        (expression
          (binary_expression
            (parameter_word
              (parameter_identifier)
              (property_name))
            (number)))))))

==================
Polar coordinates
==================

G91 @.5 ^90

---

(source_file
  (line
    (word
      (g_word
        (number)))
    (word
      (polar_distance
        (number)))
    (word
      (polar_angle
        (number)))))

==================
Spindle select
==================

S100 $0
M3 $-1

---

(source_file
  (line
    (word
      (s_word
        (unsigned_integer)))
    (word
      (spindle_select
        (number))))
  (line
    (word
      (m_word
        (number)))
    (word
      (spindle_select
        (number)))))
